--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cantor-expansion-visual-tool",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jimmychwang.github.io/cantor-expansion-visual-tool/",
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
