--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,11 @@ jobs:
 
     - name: Build the project
       run: npm run build
+    
+    - name: Upload Build Artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: build
 
   deploy:
     name: Deploy to GitHub Pages
